# correct_ws

install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/computer_vision/: CMakeLists.txt  package.xml
src/correct_bringup/: CMakeLists.txt  package.xml
src/correct_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/correct_controller/: CMakeLists.txt  package.xml
src/correct_controller/config/: joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_topics.yaml
src/correct_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/correct_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
src/correct_cpp_examples/: CMakeLists.txt
src/correct_cpp_examples/src/: executor_examples.cpp  simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_qos_publisher.cpp  simple_qos_subscriber.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
src/correct_firmware/: CMakeLists.txt  package.xml
src/correct_firmware/src/: correct_interface.cpp  simple_serial_receiver.cpp  simple_serial_transmitter.cpp
src/correct_localization/: CMakeLists.txt  package.xml
src/correct_localization/config/: amcl.yaml  ekf.yaml
src/correct_localization/correct_localization/: odometry_motion_model.py
src/correct_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/correct_localization/src/: kalman_filter.cpp  odometry_motion_model.cpp
src/correct_mapping/: CMakeLists.txt  package.xml
src/correct_mapping/launch/: slam.launch.py
src/correct_mapping/rviz/: slam.rviz
src/correct_mapping/src/: mapping_with_known_poses.cpp
src/correct_motion/: CMakeLists.txt  package.xml
src/correct_motion/correct_motion/: pd_motion_planner.py
src/correct_motion/include/correct_motion/: pd_motion_planner.hpp
src/correct_motion/src/: pd_motion_planner.cpp
src/correct_msgs/: CMakeLists.txt  package.xml
src/correct_msgs/action/: Fibonacci.action
src/correct_pkg/: CMakeLists.txt  package.xml
src/correct_pkg/launch/: gazebo.launch.py
src/correct_pkg/urdf/: kanrobot.urdf.xacro  kanrobot_ros2_control.xacro
src/correct_pkg/worlds/: hospital.world
src/correct_planning/: CMakeLists.txt
src/correct_planning/correct_planning/: a_star_planning.py  djikstra_planning.py
src/correct_planning/include/correct_planning/: a_star_planning.hpp  correct_planning.hpp  djikstra_planning.hpp
src/correct_planning/src/: a_star_planning.cpp  correct_planning.cpp  djikstra_planning.cpp
src/correct_py_examples/: package.xml  setup.cfg  setup.py
src/correct_py_examples/correct_py_examples/: simple_lifecycle_node.py  simple_service_client.py
src/correct_utils/: CMakeLists.txt  package.xml
src/correct_utils/correct_utils/: safety_stop.py
(+279 files in other folders)
